--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
   "UserService": {
-    "port": 8069,
-    "ip": "127.0.0.1"
-  },
-  "OrderService": {
-    "port": 8068,
-    "ip": "127.0.0.1"
+    "port": 8000,
+    "ip": "dh2020pc26.utm.utoronto.ca"
   },
   "ProductService": {
-    "port": 8065,
-    "ip": "127.0.0.1"
+    "port": 9000,
+    "ip": "dh2020pc26.utm.utoronto.ca"
+  },
+  "OrderService": {
+    "port": 7998,
+    "ip": "dh2020pc29.utm.utoronto.ca"
   },
   "InterServiceCommunication": {
-    "port": 14000,
-    "ip": "127.0.0.1"
+    "port": 7999,
+    "ip": "dh2020pc29.utm.utoronto.ca"
   },
   "Database": {
-    "port": 5432,
+    "port": 5434,
     "ip": "142.1.46.61"
   }
 }
