--- a/config.json
+++ b/config.json
@@ -1,22 +1,11 @@
 {
-  "UserService": {
-    "port": 8000,
-    "ip": "dh2020pc26.utm.utoronto.ca"
-  },
-  "ProductService": {
-    "port": 9000,
-    "ip": "dh2020pc26.utm.utoronto.ca"
-  },
-  "OrderService": {
-    "port": 7998,
-    "ip": "dh2020pc29.utm.utoronto.ca"
-  },
-  "InterServiceCommunication": {
-    "port": 7999,
-    "ip": "dh2020pc29.utm.utoronto.ca"
-  },
-  "Database": {
-    "port": 5434,
-    "ip": "142.1.46.61"
-  }
+  "docker": 142.1.44.57,
+  "db_port": 5432,
+  "rd_port": 6379,
+  "user": ["ip1", "ip2", "ip3"],
+  "user_port": 8000,
+  "product": ["ip1", "ip2", "ip3"],
+  "product_port": 8001,
+  "order": ["ip1", "ip2", "ip3"],
+  "order_port": 8002
 }
