--- a/database/postgres/Dockerfile
+++ b/database/postgres/Dockerfile
@@ -5,3 +5,9 @@ FROM postgres:latest
 ENV POSTGRES_DB=assignmentdb
 ENV POSTGRES_USER=assignmentuser
 ENV POSTGRES_PASSWORD=assignmentpassword
+
+# Copy postgresql.conf to container
+COPY ./postgresql.conf /etc/postgresql/postgresql.conf
+
+# Expose Port
+EXPOSE 5432
