added redis dockerfile and redis connection from commandline argument

--- a/database/redis/Dockerfile
+++ b/database/redis/Dockerfile
@@ -1,2 +1,8 @@
-# Use latest Version
+# Use the official Redis image from Docker Hub
 FROM redis:latest
+
+# Expose Redis port (default port is 6379)
+EXPOSE 6379
+
+# Command to start Redis server
+CMD ["redis-server"]
